# on-the-road-app

./: .env.example  .gitignore  CODEX_WINDOW_PROMPT.md  Procfile  README.md  pyproject.toml  requirements.txt
src/companion_backend/: app.py  config.py  database.py  main.py  models.py  prompt_policy.py  providers.py  schemas.py  services.py
tests/: test_contract.py  test_external_integrations.py
