[project]
name = "live-companion-backend"
version = "0.1.0"
description = "Railway backend for the live AI companion MVP"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.10,<4",
  "pydantic>=2.8,<3",
  "SQLAlchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
